@@ -3,13 +3,13 @@ Major:
 - System signal handling
 - Object printing
 - Streams
-- Fix large integers on Windows
 - Be able to run st files from command line
 - Support for big endian platforms
 
 Minor:
 - Use radix for floats in the lexer
 - Object inspecting
+- Fix special unary and binary messages without being too expensive
 
 Later:
 - Create a series of Smalltalk tests and benchmarks
